partial commit - UI work & polish